<resources>
    <string name="app_name">Projet EEE éco délégués</string>
    <string name="btn_releve">Nouvelle Fiche</string>
    <string name="btn_fiche">Mes fiches</string>
    <string name="btn_map">Carte</string>
    <string name="btn_apropos">A propos</string>
    <string name="actualiser">Actualiser</string>

    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="nom_espc">Nom de l\'espèce</string>
    <string name="desc">Description</string>
    <string name="btn_next">Suivant</string>

    <string name="type_lieu">Type de Lieu</string>
    <string name="surface">Surface occupée (en m2)</string>
    <string name="individu">Nombre d\'individus</string>
    <string name="stade">Stade de croissance</string>
    <string name="plantule">Plantule</string>
    <string name="jplant">Jeune plant</string>
    <string name="plant">Plant Adulte</string>
    <string name="etatplant">État des plants</string>
    <string name="vege">Végétatif</string>
    <string name="fruit">En fruits</string>
    <string name="fleur">En fleurs</string>
    <string name="rem">Remarques</string>
    <string name="retour">Retour</string>
    <string name="btn_next2">Valider</string>


    <string name="etabname">Nom de l\'établissement</string>
    <string name="p1">Nom espèce n°1</string>
    <string name="p2">Nom espèce n°2</string>
    <string name="p3">Nom espèce n°3</string>
    <string name="p4">Nom espèce n°4</string>
    <string name="p5">Nom espèce n°5</string>
    <string name="info">Retirer infos d’identification &#160;</string>
    <string name="conservation">Supprimer les données après synchronisation &#160;</string>

    <string name="tuto1">Utilisez la caméra de l\'application pour prendre en photo les espèces invasives.</string>
    <string name="tuto2">Un formulaire sera disponible pour renseigner des informations sur l\'espèce prise en photo</string>
    <string name="tuto3">Pour utiliser l\'application, une liste de 5 plantes doit être paramètrée</string>

    <string name="intervenants"><string name="auteurs"> Porteur de projet: François VANDESCHRICKE \n \nDéveloppement de l\'application: Etienne Baillif \n
        Structure du porteur de projet : Parc national / Rectorat-DAAC \n
        Autres intervenants : Christophe LAVERGNE \n
        Conservatoire Botanique National Mascarin     </string> </string>


    <!--clé mapbox-->
    <string name="access_token" translatable="false">pk.eyJ1IjoiYm9iZXU5NzQiLCJhIjoiY2t4N2hwZnMzMzRvYzJ0bGEyZDJzM2lnaCJ9.wo9hZyfcEXfOzZ2ltoRI8g</string>

</resources>