<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true"
    android:focusableInTouchMode="true">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FnomEtablissement"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/etabname"
        app:boxBackgroundColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        app:helperTextTextColor="#D1291D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >       <!-- app:startIconDrawable="@drawable/ic_launcher_background"-->


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FNameSpinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="10dp"
        android:hint="@string/p1"
        app:boxBackgroundColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        app:helperTextTextColor="#D1291D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FnomEtablissement">       <!-- app:startIconDrawable="@drawable/ic_launcher_background"-->


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FNameSpinner1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="10dp"
        android:hint="@string/p2"
        app:boxBackgroundColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        app:helperTextTextColor="#D1291D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FNameSpinner">       <!-- app:startIconDrawable="@drawable/ic_launcher_background"-->


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FNameSpinner2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="10dp"
        android:hint="@string/p3"
        app:boxBackgroundColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        app:helperTextTextColor="#D1291D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FNameSpinner1"

        >       <!-- app:startIconDrawable="@drawable/ic_launcher_background"-->


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FNameSpinner3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="10dp"
        android:hint="@string/p4"
        app:boxBackgroundColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"

        app:helperTextTextColor="#D1291D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FNameSpinner2"

        >       <!-- app:startIconDrawable="@drawable/ic_launcher_background"-->


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FNameSpinner4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="10dp"
        android:hint="@string/p5"
        app:boxBackgroundColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperTextTextColor="#D1291D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FNameSpinner3"

        >       <!-- app:startIconDrawable="@drawable/ic_launcher_background"-->


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/FNameSpinner4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/Fbtnconfirme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrondir"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FcheckBoxEleve"
            android:layout_marginTop="15dp"
            android:text="@string/btn_next2"
            />

        <CheckBox
            android:id="@+id/FcheckBoxEleve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/info"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>